2009-01-10  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/node_default.erl: fix unsubscription of full jid
	subscribed node (thanks to Andy Skelton)(EJAB-839)

2009-01-09  Badlop  <badlop@process-one.net>

	* doc/release_notes_2.0.3.txt: New file for new release

	* doc/guide.tex: Improve explanation of backup commands (EJAB-832)
	* doc/guide.html: Likewise

	* src/web/ejabberd_web_admin.erl: New appearance of WebAdmin logo,
	fixed logo-fill.

	* src/mod_configure.erl: Fix access check for vhost configuration

2009-01-08  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: completely support subscription using
	full JID (EJAB-701)
	* src/mod_pubsub/node_default.erl: Likewise

	* src/mod_pubsub/node_default.erl: any entity can retrieve item when
	node access model is "open" (thanks to Myers Carpenter)(EJAB-836)

2009-01-08  Mickael Remond  <mremond@process-one.net>

	* src/ejabberd_listener.erl: Define send timeout option to avoid
	blocking on socket send (EJAB-746).
	* src/ejabberd_s2s_out.erl: Likewise.

2009-01-06  Badlop  <badlop@process-one.net>

	* src/msgs/ru.msg: Fix typo (thanks to Dominges)

2009-01-05  Alexey Shchepin  <alexey@process-one.net>

	* src/tls/tls_drv.c: Added a flag to avoid certificate validation
	* src/tls/tls.erl: Likewise
	* src/ejabberd_c2s.erl: Likewise

2009-01-03  Badlop  <badlop@process-one.net>

	* src/*.erl: Fix EDoc comments

2009-01-03  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: deliver notification depending on
	presence-based-delivery configuration (EJAB-827). notification code
	rewrite.

	* src/mod_pubsub/mod_pubsub.erl: code cleanning, minor bugfixes
	* src/mod_pubsub/node_default.erl: Likewise
	* src/mod_pubsub/node_pep.erl: Likewise
	* src/mod_pubsub/pubsub.hrl: Likewise

	* src/mod_pubsub/mod_pubsub.erl: prevent subscribing with full jid,
	waiting for full jid support (EJAB-701)
